--- a/index.html
+++ b/index.html
@@ -275,7 +275,54 @@
                     Nenecháme to tak. Pokud systém nefunguje pro nás, změníme ho.
                 </p>
             </div>
+        </article>
 
+        <article class="fade-in" style="margin-top: 80px; padding-top: 40px; border-top: 4px dashed var(--primary);">
+            
+            <div style="background: var(--primary); color: black; display: inline-block; padding: 5px 10px; font-weight: bold; margin-bottom: 15px;">
+                HLAS ULICE / ANONYM
+            </div>
+
+            <h2>POMÁHAT A CHRÁNIT? SPÍŠ BUZEROVAT A MLÁTIT!</h2>
+            
+            <p style="color: var(--text-muted); font-size: 0.8rem; margin-bottom: 30px;">
+                Autor: Oči Ulice / Hlas Svědomí | Čtení: 2 min
+            </p>
+
+            <p class="lead" style="color: white; font-style: italic;">
+                "Podívejte se do zpětného zrcátka. Vidíte ty majáky? Cítíte ten pocit bezpečí? Ani náhodou. Cítíte strach. A přesně to oni chtějí."
+            </p>
+
+            <p>
+                Policie v tomto městě zapomněla, komu má sloužit. Heslo "Pomáhat a chránit" je už jen prázdná samolepka na kapotě jejich drahých aut, která jsme jim zaplatili my.
+            </p>
+
+            <p>
+                <strong>Realita na ulici:</strong> Když vás někdo přepadne, sepíšou papír a odloží ho do šuplíku. Ale zkuste přejet na červenou, nebo se na ně "špatně podívat". To najednou vidíte tu aktivitu. To najednou fungují obušky, tasery a pouta.
+            </p>
+
+            <p>
+                Odznak pro ně není symbolem cti. Je to povolenka k šikaně. Je to štít, za který se schovávají zakomplexovaní jedinci, kteří si potřebují dokazovat sílu na bezbranných. Kolikrát jste viděli, jak povalili někoho na zem jen proto, že se zeptal "Proč?"? Kolikrát jste viděli houkat sirény jen proto, že si páni policisté jeli pro koblihy, zatímco my stojíme v zácpě?
+            </p>
+
+            <div style="border-left: 4px solid var(--secondary); padding-left: 20px; margin: 30px 0; color: var(--secondary); font-size: 1.1rem; font-weight: bold;">
+                Oni nejsou zákon. Oni jsou jen ozbrojený gang placený z našich daní.
+            </div>
+
+            <p>Nenechme si to líbit:</p>
+            <ul style="list-style: none; padding: 0;">
+                <li style="margin-bottom: 10px;">📹 <strong>Natáčejte je.</strong> Každý zákrok, každou nespravedlnost. Bojí se kamer jako čert kříže.</li>
+                <li style="margin-bottom: 10px;">🗣️ <strong>Ptejte se.</strong> Nenechte se zastrašit jejich křikem.</li>
+                <li style="margin-bottom: 10px;">✊ <strong>Držte spolu.</strong> Když uvidíte policejní brutalitu, neotáčejte hlavu. Dnes je to cizí člověk, zítra to můžete být vy.</li>
+            </ul>
+
+            <p>
+                Město patří lidem, ne uniformám. Sundejte si klapky z očí.
+            </p>
+
+            <p style="color: var(--primary); font-weight: bold; margin-top: 20px;">
+                #StopPolicejníBrutalitě #ModráMafie #VimeKdoJste
+            </p>
         </article>
 
         <div class="contact-box fade-in">
