--- a/index.html
+++ b/index.html
@@ -198,18 +198,21 @@
             font-size: 1.5rem;
         }
 
-        /* Placeholders */
+        /* IMAGE STYLING - UPRAVENÁ VELIKOST */
         .poster-image {
             width: 100%;
-            max-width: 600px;
+            max-width: 350px; /* ZMENŠENÉ Z 600px NA 350px */
             display: block;
-            margin: 20px auto;
-            border: 1px solid var(--text-main);
-            filter: grayscale(100%) contrast(1.2);
-            transition: filter 0.3s;
+            margin: 20px auto 30px auto; /* Upravené okraje */
+            border: 2px solid var(--text-main);
+            filter: grayscale(100%) contrast(1.2) brightness(0.8);
+            transition: all 0.4s ease;
+            box-shadow: 0 0 20px rgba(0,0,0,0.8);
         }
         .poster-image:hover {
-            filter: grayscale(0%) contrast(1);
+            filter: grayscale(0%) contrast(1) brightness(1);
+            border-color: var(--primary);
+            box-shadow: 0 0 30px rgba(255, 0, 60, 0.3);
         }
 
     </style>
@@ -285,10 +288,11 @@
 
             <h2>POMÁHAT A CHRÁNIT? SPÍŠ BUZEROVAT A MLÁTIT!</h2>
             
-            <p style="color: var(--text-muted); font-size: 0.8rem; margin-bottom: 30px;">
+            <p style="color: var(--text-muted); font-size: 0.8rem; margin-bottom: 20px;">
                 Autor: Oči Ulice / Hlas Svědomí | Čtení: 2 min
             </p>
 
+            <img src="https://r2.fivemanage.com/ITfLP6A8ZmjEvfmKPq1cU/YzgHj03WuPyK.png" class="poster-image" alt="Benjamin Wallace s vlajkou USA">
             <p class="lead" style="color: white; font-style: italic;">
                 "Podívejte se do zpětného zrcátka. Vidíte ty majáky? Cítíte ten pocit bezpečí? Ani náhodou. Cítíte strach. A přesně to oni chtějí."
             </p>
