--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE WALLACE REPORT | SYSTEM ERROR</title>
+    <title>THE DIABLO REPORT | SYSTEM ERROR</title>
     <style>
         :root {
             --primary: #ff003c; /* Cyberpunk červená */
@@ -220,13 +220,13 @@
 <body>
 
     <div class="glitch-wrapper">
-        <h1 class="glitch" data-text="THE WALLACE REPORT">THE WALLACE REPORT</h1>
+        <h1 class="glitch" data-text="THE DIABLO REPORT">THE DIABLO REPORT</h1>
         <p style="color: var(--primary); letter-spacing: 3px;">/// DEKÓDOVÁNÍ PRAVDY ///</p>
     </div>
 
     <div class="ticker-wrap">
         <div class="ticker">
-            +++ MIMOŘÁDNÁ ZPRÁVA: ŠÉF POLICIE ODVOLÁN +++ SYSTÉM SELHAL +++ SPRAVEDLNOST PRO MENŠINY +++ BENJAMIN WALLACE ODHALUJE PRAVDU +++
+            +++ MIMOŘÁDNÁ ZPRÁVA: ŠÉF POLICIE ODVOLÁN +++ SYSTÉM SELHAL +++ SPRAVEDLNOST PRO MENŠINY +++ THE DIABLO REPORT ODHALUJE PRAVDU +++
         </div>
     </div>
 
