--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
@@ -477,6 +476,11 @@
                 </p>
 
                 <img src="https://cdn.discordapp.com/attachments/1456278653565534352/1456999357860679813/1767446080536.jpg?ex=695a67e4&is=69591664&hm=c18d238afbcac49eaa0e7eb5c493362b6f9eef8afe5e126c88051fcc34482204&" class="poster-image" alt="Protest">
+
+                <div style="border: 1px solid var(--text-main); padding: 15px; margin: 20px 0; background: rgba(255,255,255,0.05);">
+                    <strong style="color: var(--primary);">⚠️ DŮLEŽITÉ UPOZORNĚNÍ:</strong><br>
+                    Aby nedošlo k omylu: Tento text <strong>není</strong> namířen proti Afroameričanům nebo občanům tmavé pleti narozeným v USA. Vy jste tu doma, vy jste tuto zemi budovali s námi. Náš hněv směřuje výhradně proti nově příchozím ekonomickým migrantům z Afriky a Asie, kteří sem jdou jen pro dávky na úkor nás všech.
+                </div>
 
                 <p class="lead" style="color: white;">
                     Podívejte se na svou výplatní pásku. Vidíte tu částku, kterou vám stát každý měsíc sebere pod položkou "Daně"?
